<resources>
    <string name="app_name">AuthentiKit</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_sign_in_short">Sign Up</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? SIGN UP</string>
    <string name="btn_link_to_login">Already a member. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="msg">Please enable all permissions</string>
    <string name="verify">Verify Email Address</string>
    <string name="verify_content">We already have sent your verification email to your email address. Tap reload to continue login. </string>
    <string name="btn_reload">Reload</string>
    <string name="resend">If you did not received any email, Resend verification email.</string>
    <string name="select">Select which part of the lipstick you wish to capture</string>
    <string name="location_prompt">Type of Location</string>
    <string name="btn_home">Back to Home</string>

    <string-array name="location_arrays">
        <item>Independent Boutique</item>
        <item>Unauthorized Retailer</item>
    </string-array>

    <string name="detail_prompt">Type of Location</string>

    <string-array name="detail_arrays">
        <item>MAC Logo</item>
        <item>MAC Bottom Sticker</item>
    </string-array>

    <string name="mac_logo">MAC Logo</string>
    <string name="mac_sticker">MAC Bottom Sticker</string>


</resources>
